<resources>
    <string name="app_name">Tacos Maker</string>

    <string name="recipes">Recettes</string>
    <string name="otacos">O\'Tacos</string>
    <string name="tacos">Tacos</string>


    <string name="myrecipes_title">Mes recettes</string>
    <string name="my_account">Mon compte</string>
    <string name="settings">Paramètres</string>
    <string name="about">À propos</string>
    <string name="rechercher_une_recette">Rechercher une recette</string>


    <string name="myrecipe_title">Ma recette</string>
    <string name="myrecipe_img_desc">Image de ma recette</string>
    <string name="nom_de_la_recette">Nom de la recette</string>
    <string name="sauces_recette">Sauce(s)</string>
    <string name="viandes_recette">Viande(s)</string>
    <string name="supplements_recette">Suppléments</string>

    <string name="title_edit_recipe">Modifier recette</string>
    <string name="apply">Appliquer</string>


    <string name="map">Map</string>
    <string name="list_otacos">Liste</string>
    <string name="adresse">Adresse</string>


    <string name="tacos_title">Création de tacos</string>
    <string name="random_recipe">Créer une recette aléatoire</string>
    <string name="taille_du_tacos">Taille du tacos</string>
    <string name="create_recipe">Créer la recette</string>
    <string name="terminer_recette">Terminer la recette</string>


    <string name="taille">Taille du tacos</string>
    <string name="sauces">Sélection de la sauce</string>
    <string name="viandes">Sélection de la viande</string>
    <string name="supplements">Sélection des suppléments</string>

    <string name="m">M (1 viande max)</string>
    <string name="l">L (2 viandes max)</string>
    <string name="xl">XL (3 viandes max)</string>
    <string name="xxl">XXL (4 viandes max)</string>


    <!-- Description -->
    <string name="button_menu_description">Bouton qui affiche le menu des options</string>
    <string name="button_back_description">Retourne à l\'écran précédent</string>
    <string name="button_searchRecipe_desc">Recherche une recette</string>
    <string name="otacos_img_desc">Image d\'un OTacos</string>
    <string name="fav_desc">Met en favoris</string>
    <string name="confirm_suppression">Voulez-vous vraiment supprimer cette recette ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="plus">Plus</string>
    <string name="nav_options_title">Tacos Maker</string>
    <string name="nav_options_subtitle">Made by AndroTeam</string>
    <string name="nav_options_img_desc">Icône du menu options</string>



    <string name="text_about">
        Le tacos français se compose d\'une tortilla repliée sur elle-même et grillée, contenant toujours une garniture qui est le plus souvent à base de viandes, de frites et de sauce. Très différent du taco, le tacos (avec un « s » même au singulier) français, hybride entre panini, kebab et burrito, est de forme rectangulaire et comprend des frites et un fromage crémeux industriel.
        \n\nO\'Tacos est une chaîne de restauration rapide, française et spécialisée dans le tacos français.
        Le point fort de cette chaîne de restauration est que le client choisit ces ingrédients (viandes, sauces et suppléments), ainsi que la taille de son tacos.
        \n\nNombre de sauces maximum: 2\nNombre de viandes maximum (selon la taille du tacos): M->1, L->2, XL->3, XXL->4
    </string>
    <string name="copyright">Copyright © 2019 AndroTeam</string>
    <string name="distance">Distance</string>
    <string name="unknown_location">inconnue (localisation impossible)</string>
    <string name="image_distance_otacos">image distance otacos</string>
    <string name="my_fav_recipes_title">Mes recettes favorites</string>
    <string name="other_recipes_title">Autres recettes</string>
    <string name="fav_otacos_title">O\'Tacos favoris</string>
    <string name="other_otacos_title">Autres O\'Tacos</string>
    <string name="reinitialize_all_data">Réinitialiser toutes mes données</string>
    <string name="warning_reinit">Attention ! Vous ne pourrez plus récupérer vos données !</string>
    <string name="cancel">Annuler</string>
    <string name="continuer">Continuer</string>

    <!-- account strings -->
    <string name="loading">Chargement</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="sign_out">Changer de compte</string>
    <string name="signed_out">Déconnecté</string>
    <string name="desc_google_icon">Icône Google</string>
    <string name="signed_in_fmt">Connecté en tant que: %s</string>
    <string name="desc_firebase_lockup">firebase lockup</string>
    <string name="google_title_text">Compte Google</string>
    <string name="google_status_fmt">Utilisateur Google: %s</string>
    <string name="firebase_status_fmt">Utilisateur Firebase: %s</string>
    <string name="debug_force_location">[DEBUG] Force location</string>
    <string name="delete_firebase_account">Supprimer mes données en ligne</string>
    <string name="download_data_from_firebase">Télécharger les données depuis le compte</string>
    <string name="warning_firebase">Attention ! Vos données locales seront supprimées !</string>
</resources>
